test/testdata/functions/invalid_property_assignment_error.lox
fun f() {}
f.y = 1; // error: property assignment is not valid for 'function' value
